--- a/src/main/resources/client/partials/user/crud.html
+++ b/src/main/resources/client/partials/user/crud.html
@@ -9,11 +9,17 @@
     <ul class="resp-list">
         <li class="resp-list-item" ng-repeat="foo in foos">
             <div class="left-block"><div class="foo-id">#{{foo.id}}</div></div>
+            <div class="right-block">
+                <div class="date-block">
+                    <div class="day">{{foo.date | date: 'dd'}}</div>
+                    <div class="month">{{foo.date | date: 'MMM'}}</div>
+                    <div class="year">{{foo.date | date: 'yyyy'}}</div>
+                </div>
+            </div>
             <div class="content-block">
                 <div class="primary-content-block">{{foo.label}}</div>
                 <div class="secondary-content-block">{{foo.description}}</div>
             </div>
-            <div class="right-block">{{foo.date}}</div>
         </li>
     </ul>
     <div id="footer-push"></div>
