--- a/src/main/resources/client/partials/user/crud.html
+++ b/src/main/resources/client/partials/user/crud.html
@@ -2,7 +2,7 @@
     <div id="open-menu" class="nav-button" ng-click="$rootScope.menuVisible = true">
         <i class="fa fa-bars">&nbsp;</i>
     </div>
-    <div class="screen-title">CRUD Foo</div>
+    <div class="screen-title">CRUD Foo&nbsp;<i class="fa fa-caret-down"></i></div>
 </div>
 <div id="content">
     <div id="header-push"></div>
