--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -130,9 +130,7 @@ h1, h2, h3, h4, h5, h6 {
     max-height: 56px;
     border-radius:0;
     margin:0;
-    border-left:none;
-    border-top:none;
-    border-right:none;
+    border:none;
     box-shadow: none;
     position:fixed;
     top:0;
@@ -190,9 +188,13 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
 }
 
+.dark-content {
+    background-color:rgb(250, 250, 250);
+}
+
 .clear { clear: both; visibility:hidden; overflow: auto;}
 
-#footer-push, #header-push {
+.footer-push, .header-push {
     clear: both;
     height: 56px;
 }
@@ -216,16 +218,39 @@ h1, h2, h3, h4, h5, h6 {
 
 .crud-list-wrapper {
     float:left;
-    width:450px;
-    border-right:1px solid rgba(230,230,230,0.3);
+    width:350px;
+    margin:0;
+    padding:0;
+    margin-top:56px;
+}
+.crud-menu-wrapper {
+    height: 56px;
+    width: 100%;
+    border-bottom: 1px solid rgba(230,230,230,0.3);
+    background-color:rgb(250,250,250);
+    position:fixed;
 }
 
 .crud-detail-wrapper {
-    margin:0;
+    margin:0 80px 0 350px;
     padding:0;
-    overflow:hidden;
-    margin-left:450px;
     position:fixed;
+    width:500px;
+    border:1px solid rgba(230,230,230,0.3);
+    background-color:white;
+    z-index:10;
+}
+
+.crud-add-wrapper .crud-add-button {
+    float:right;
+    background-color:white;
+    border:1px solid rgb(230,230,230);
+    line-height:52px;
+    height:56px;
+    width:56px;
+    border-radius:56px;
+    text-align:center;
+    font-size:26px;
 }
 
 ul.resp-list {
