--- a/src/main/resources/client/partials/user/crud.html
+++ b/src/main/resources/client/partials/user/crud.html
@@ -2,21 +2,22 @@
     <div id="open-menu" class="nav-button" ng-click="$rootScope.menuVisible = true">
         <i class="fa fa-bars">&nbsp;</i>
     </div>
-    <div class="screen-title">CRUD Foo&nbsp;<i class="fa fa-caret-down"></i></div>
+    <div class="screen-title">CRUD Foo</i></div>
 </div>
-<div id="content">
-    <div id="header-push"></div>
+<div id="content" class="dark-content">
+    <div class="header-push"></div>
+
+    <div class="crud-menu-wrapper">
+        All&nbsp;<i class="fa fa-caret-down"></i>
+        <div class="crud-add-wrapper">
+            <div class="crud-add-button">+</div>
+        </div>
+    </div>
+
     <div class="crud-list-wrapper">
         <ul class="resp-list">
             <li class="resp-list-item" ng-repeat="foo in foos" ng-click="displayDetails(foo)" >
                 <div class="left-block"><div class="foo-id">#{{foo.id}}</div></div>
-                <div class="right-block">
-                    <div class="date-block">
-                        <div class="day">{{foo.date | date: 'dd'}}</div>
-                        <div class="month">{{foo.date | date: 'MMM'}}</div>
-                        <div class="year">{{foo.date | date: 'yyyy'}}</div>
-                    </div>
-                </div>
                 <div class="content-block" ng-click="displayDetails('toto');">
                     <div class="primary-content-block">{{foo.label}}</div>
                     <div class="secondary-content-block">{{foo.description}}</div>
@@ -24,10 +25,13 @@
             </li>
         </ul>
     </div>
+
     <div class="crud-detail-wrapper">
         {{selectedFoo.label}}
     </div>
-    <div id="footer-push"></div>
+
+
+    <div class="footer-push"></div>
 </div>
 <div id="footer">
     <div ng-include="'partials/user/footer.html'"></div>
