refactor with angular materials

--- a/src/main/resources/client/partials/user/main.html
+++ b/src/main/resources/client/partials/user/main.html
@@ -1,16 +1,15 @@
 <div layout="row" md-theme="blue-grey">
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('md')">
         <md-toolbar>
-            <h1 class="md-toolbar-tools">Sidenav Left toto</h1>
+            <h1 class="md-toolbar-tools">StarterKit Application</h1>
         </md-toolbar>
         <md-content class="md-padding" ng-controller="LeftNavCtrl">
             my menu
             <ul>
-                <li>menu1</li>
-                <li>menu2</li>
-                <li>menu3</li>
-                <li>menu4</li>
-                <li>menu5</li>
+                <li>Welcome</li>
+                <li>CRUD Example</li>
+                <li>Chat</li>
+                <li>Administration</li>
             </ul>
         </md-content>
     </md-sidenav>
