--- a/src/main/resources/client/css/fonts.css
+++ b/src/main/resources/client/css/fonts.css
@@ -33,18 +33,18 @@
 }
 
 @font-face {
-    font-family: 'robotligth';
-    src: url('../fonts/roboto/Roboto-Ligth-webfont.eot');
-    src: url('../fonts/roboto/Roboto-Ligth-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto/Roboto-Ligth-webfont.woff') format('woff'),
-         url('../fonts/roboto/Roboto-Ligth-webfont.ttf') format('truetype'),
-         url('../fonts/roboto/Roboto-Ligth-webfont.svg#robotoregular') format('svg');
+    font-family: 'robotoligth';
+    src: url('../fonts/roboto/Roboto-Light-webfont.eot');
+    src: url('../fonts/roboto/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto/Roboto-Light-webfont.woff') format('woff'),
+         url('../fonts/roboto/Roboto-Light-webfont.ttf') format('truetype'),
+         url('../fonts/roboto/Roboto-Light-webfont.svg#robotoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotitalic';
+    font-family: 'robotoitalic';
     src: url('../fonts/roboto/Roboto-Italic-webfont.eot');
     src: url('../fonts/roboto/Roboto-Italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/roboto/Roboto-Italic-webfont.woff') format('woff'),
@@ -55,7 +55,7 @@
 }
 
 @font-face {
-    font-family: 'robotbold';
+    font-family: 'robotobold';
     src: url('../fonts/roboto/Roboto-Bold-webfont.eot');
     src: url('../fonts/roboto/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/roboto/Roboto-Bold-webfont.woff') format('woff'),
