--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -1,3 +1,20 @@
 @import url(fonts.css);
 
 .ng-scope { height: 100%; min-height:100%; max-height:100%}
+
+.menu-item {
+    padding:0 16px;
+}
+
+.menu-title {
+    font-family: 'robotomedium';
+    font-size:14px;
+    line-height:48px;
+}
+
+.menu-title .menu-icon {
+    font-size:24px;
+    line-height:48px;
+    margin-right:32px;
+}
+
