--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -1,6 +1,6 @@
 @import url(fonts.css);
 
-.ng-scope { height: 100%; min-height:100%; max-height:100%}
+body, .main-container { height: 100%; min-height:100%; max-height:100%}
 
 .menu-item {
     padding:0 16px;
