Update menu design

--- a/src/main/resources/client/partials/user/ui-demo.html
+++ b/src/main/resources/client/partials/user/ui-demo.html
@@ -2,7 +2,7 @@
     <h1>Button</h1>
     <md-content>
         <style>
-            section .md-button {margin:1em;}
+            section .md-button {margin:0.5em;}
         </style>
 
         <h2>Classic</h2>
@@ -15,10 +15,10 @@
 
         <h2>Raised</h2>
         <section layout="row" layout-phone="column" layout-align="center center">
-            <md-button class="md-raised">Button</md-button>&nbsp;
-            <md-button class="md-raised md-primary">Primary</md-button>&nbsp;
-            <md-button ng-disabled="true" class="md-raised md-primary">Disabled</md-button>&nbsp;
-            <md-button class="md-raised md-warn">Warn</md-button>&nbsp;
+            <md-button class="md-raised">Button</md-button>
+            <md-button class="md-raised md-primary">Primary</md-button>
+            <md-button ng-disabled="true" class="md-raised md-primary">Disabled</md-button>
+            <md-button class="md-raised md-warn">Warn</md-button>
         </section>
 
         <h2>Fab</h2>
@@ -42,15 +42,15 @@
 
         <h2>Link</h2>
         <section layout="row" layout-phone="column" layout-align="center center">
-            <md-button ng-href="{{googleUrl}}" target="_blank">Go to Google</md-button>&nbsp;
+            <md-button ng-href="{{googleUrl}}" target="_blank">Go to Google</md-button>
             <md-button>RSVP</md-button>
         </section>
 
         <h2>Colored</h2>
         <section layout="row" layout-phone="column" layout-align="center center">
-            <md-button class="md-primary" md-theme="green">Button</md-button>&nbsp;
-            <md-button class="md-primary md-raised" md-theme="indigo">Button</md-button>&nbsp;
-            <md-button class="md-primary md-raised" md-theme="orange">Button</md-button>&nbsp;
+            <md-button class="md-primary" md-theme="green">Button</md-button>
+            <md-button class="md-primary md-raised" md-theme="indigo">Button</md-button>
+            <md-button class="md-primary md-raised" md-theme="orange">Button</md-button>
             <md-button class="md-primary" md-theme="cyan">Button</md-button>
         </section>
     </md-content>
