--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -4,6 +4,16 @@ body, .main-container { height: 100%; min-height:100%; max-height:100%}
 
 .menu-item {
     padding:0 16px;
+    text-decoration:none;
+}
+
+.menu-item:hover {
+    background-color:#F9F9F9;
+}
+
+.menu-item span {
+    color:black;
+    text-transformation:uppercase;
 }
 
 .menu-title {
@@ -13,8 +23,16 @@ body, .main-container { height: 100%; min-height:100%; max-height:100%}
 }
 
 .menu-title .menu-icon {
+    color:#666;
     font-size:24px;
     line-height:48px;
     margin-right:32px;
+    width:24px;
+    height:24px;
+}
+
+.menu-sidenav {
+    background:url('../img/material-bg-6.jpg');
+    background-size: cover;
 }
 
