--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -1,5 +1,9 @@
 @import url(fonts.css);
 
+html {
+    font-size:1em;
+}
+
 body, .main-container { height: 100%; min-height:100%; max-height:100%}
 
 .menu-item {
