--- a/src/main/resources/client/partials/user/home.html
+++ b/src/main/resources/client/partials/user/home.html
@@ -1,1 +1,147 @@
-Hello World!
+<h1>Welcome on Staterkit application</h1>
+<p>You can find below a demo of the main graphical component from <a href="https://material.angularjs.org/#/" target="_blank">Angular Material</a> used by this starter kit.</p>
+
+<section layout="row" layout-tablet="column" layout-phone="column" style="margin-right:16px;">
+
+    <style>
+        .demo-button {
+        background: #f7f7f7;
+        border-radius: 3px;
+        text-align: center;
+        margin: 8px;
+        position: relative !important;
+        padding:8px;}
+        .demo-button .md-button {margin:10px;}
+    </style>
+
+    <section layout="column" flex>
+        <h2>Button</h2>
+
+        <section layout="row" layout-phone="column" layout-align="center center" class="demo-button">
+            <md-button>{{title1}}</md-button>
+            <md-button md-no-ink class="md-primary">Primary (md-noink)</md-button>
+            <md-button ng-disabled="isDisabled" class="md-primary">Disabled</md-button>
+            <md-button class="md-warn" ng-click="isDisabled = !isDisabled">{{title4}}</md-button>
+        </section>
+
+        <section layout="row" layout-phone="column" layout-align="center center" class="demo-button">
+            <md-button class="md-raised">Button</md-button>
+            <md-button class="md-raised md-primary">Primary</md-button>
+            <md-button ng-disabled="true" class="md-raised md-primary">Disabled</md-button>
+            <md-button class="md-raised md-warn">Warn</md-button>
+        </section>
+
+        <section layout="row" layout-phone="column" layout-align="center center" class="demo-button">
+            <md-button class="md-fab" aria-label="Time">
+                <i class="fa fa-file-text-o"></i>
+            </md-button>
+            &nbsp;
+            <md-button class="md-fab" aria-label="New document" >
+                <i class="fa fa-plus"></i>
+            </md-button>
+            &nbsp;
+            <md-button class="md-fab" ng-disabled="true" aria-label="Comment">
+                <i class="fa fa-google-plus"></i>
+            </md-button>
+            &nbsp;
+            <md-button class="md-fab md-primary" md-theme="cyan" aria-label="Profile">
+                <i class="fa fa-check"></i>
+            </md-button>
+        </section>
+
+        <section layout="row" layout-phone="column" layout-align="center center" class="demo-button">
+            <md-button ng-href="{{googleUrl}}" target="_blank">Go to Google</md-button>
+            <md-button>RSVP</md-button>
+        </section>
+
+        <section layout="row" layout-phone="column" layout-align="center center" class="demo-button">
+            <md-button class="md-primary" md-theme="green">Button</md-button>
+            <md-button class="md-primary md-raised" md-theme="indigo">Button</md-button>
+            <md-button class="md-primary md-raised" md-theme="orange">Button</md-button>
+            <md-button class="md-primary" md-theme="cyan">Button</md-button>
+        </section>
+
+    </section>
+
+    <section layout="column" flex>
+        <style>
+            .demo-form form > .row {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -moz-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            -moz-align-items: center;
+            align-items: center;
+            -webkit-box-direction: normal;
+            -webkit-box-orient: horizontal;
+            -webkit-flex-direction: row;
+            -moz-flex-direction: row;
+            -ms-flex-direction: row;
+            flex-direction: row; }
+            .demo-form md-input-group { margin-left: 8px; margin-right: 8px;}
+            .demo-form md-input-group.long > input { width: 264px;}
+        </style>
+        <h2>Form</h2>
+        <section layout="column" class="demo-form">
+            <md-content md-theme="light-blue-dark" >
+                <form style="padding: 20px;">
+                    <section layout="row" layout-phone="column">
+                        <md-text-float label="Title" ng-model="user.title"></md-text-float>
+                        <md-text-float label="eMail" ng-model="user.email" type="email"></md-text-float>
+                    </section>
+                </form>
+            </md-content>
+            <md-content>
+                <form style="padding: 20px;">
+                    <md-text-float label="Company" ng-model="user.company" disabled> </md-text-float>
+                    <section layout="row" layout-phone="column">
+                        <md-text-float label="FirstName" ng-model="user.firstName"> </md-text-float>
+                        <md-text-float label="LastName" ng-model="user.lastName" class="long"> </md-text-float>
+                    </section>
+                    <md-text-float label="Address" ng-model="user.address"> </md-text-float>
+                    <section layout="row" layout-phone="column">
+                        <md-text-float label="City" ng-model="user.city"> </md-text-float>
+                        <md-text-float label="State" ng-model="user.state"> </md-text-float>
+                        <md-text-float label="Postal Code" ng-model="user.postalCode"> </md-text-float>
+                    </section>
+                    <md-text-float label="Country" ng-model="user.country" disabled> </md-text-float>
+                </form>
+            </md-content>
+            <md-checkbox ng-model="data.cb1" aria-label="Checkbox 1">
+                Checkbox 1: {{ data.cb1 }}
+            </md-checkbox>
+            <md-checkbox ng-model="data.cb2" aria-label="Checkbox 2" ng-true-value="'yup'" ng-false-value="'nope'">
+                Checkbox 2: {{ data.cb2 }}
+            </md-checkbox>
+            <md-checkbox ng-disabled="true" aria-label="Disabled checkbox">
+                Checkbox (Disabled)
+            </md-checkbox>
+            <md-checkbox ng-disabled="true" aria-label="Disabled checked checkbox" ng-model="data.cb4" ng-init="data.cb4=true">
+                Checkbox (Disabled, Checked)
+            </md-checkbox>
+            <md-checkbox md-no-ink aria-label="Checkbox No Ink">
+                Checkbox (No Ink)
+            </md-checkbox>
+            <md-switch ng-model="data.cb1" aria-label="Switch 1">
+                Switch 1: {{ data.cb1 }}
+            </md-switch>
+            <md-switch ng-model="data.cb2" aria-label="Switch 2" ng-true-value="'yup'" ng-false-value="'nope'">
+                Switch 2: {{ data.cb2 }}
+            </md-switch>
+            <md-switch ng-disabled="true" aria-label="Disabled switch">
+                Switch (Disabled)
+            </md-switch>
+            <md-switch ng-disabled="true" aria-label="Disabled active switch" ng-model="data.cb4" ng-init="data.cb4=true">
+                Switch (Disabled, Active)
+            </md-switch>
+            <md-switch md-no-ink aria-label="Switch No Ink">
+                Switch (No Ink)
+            </md-switch>
+        </section>
+    </section>
+</section>
