Add some UX enhancement

--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -38,3 +38,7 @@ body, .main-container { height: 100%; min-height:100%; max-height:100%}
 .menu-sidenav {
 }
 
+md-progress-circular .loader > md-circle {
+     background-color: white;
+}
+
